Work on fixing dark mode

--- a/src/WebFrontEnd/ClientApp/src/app/modules/lobby/components/commonoptions-dialog/commonoptions-dialog.component.scss
+++ b/src/WebFrontEnd/ClientApp/src/app/modules/lobby/components/commonoptions-dialog/commonoptions-dialog.component.scss
@@ -5,6 +5,6 @@
     margin-bottom: 1rem;
 }
 
-.mat-radio-button~.mat-radio-button {
+.mat-mdc-radio-button~.mat-mdc-radio-button {
     margin-left: 35px;
 }
